--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </ul>        
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">成功案例</a>
+            	<a href="html/b_html/works.html" class="h_select">成功案例</a>
 	        	<ul class="h_ul">
 	            	<li><a href="#">全部案例</a></li>
 	            	<li><a href="#" id="h_video">视频会议</a></li>
@@ -96,6 +96,7 @@
             </div>
             <div class="h_nav_box left">
             	<a href="#" class="h_select">绿色办公室</a>
+            	<ul class="h_ul"></ul>
             </div>   
             <!-- 翻译 -->
             <div class="h_language left clear">
