angular路由 完成 Signed-off-by: huxuexue <1711356156@qq.com>

--- a/html/x-html/tzzgx.html
+++ b/html/x-html/tzzgx.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html ng-app="app2">
 <head>
 	<title></title>
 	<meta charset="utf-8">
@@ -9,23 +9,9 @@
 	<meta name="applicable-device" content="pc,mobile">
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css"/>
 	<link href="../../css/x-css/about.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
-	<link href="../../css/x-css/aboutphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
-	<link href="../../css/x-css/h_gywm.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
-	<link href="../../css/x-css/h_gywmphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
-	<link href="../../css/x-css/h_zcyj.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
-	<link href="../../css/x-css/h_zcjyphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
-	<link href="../../css/x-css/h_qyjs.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
-	<link href="../../css/x-css/h_qyjsphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
-	<link href="../../css/x-css/h_hydw.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
-	<link href="../../css/x-css/h_hydwphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
-	<link href="../../css/x-css/h_qyry.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
-	<link href="../../css/x-css/h_qyryphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
-	<link href="../../css/x-css/h_qyfc.css" type="text/css" rel="stylesheet" media="screen and (min-width:769px)">
-	<link href="../../css/x-css/h_qyfcphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">	
-	<link href="../../css/x-css/h_jywm.css" type="text/css" rel="stylesheet" media='screen and (min-width:769px)' >
-	<link href="../../css/x-css/h_jywmphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
-	<link rel="stylesheet" type="text/css" href="../../css/x-css/h_lxwm.css" media="screen and (min-width:769px)">
-	<link href="../../css/x-css/h_lxwmphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">
+	<link href="../../css/x-css/aboutphone.css" type="text/css" rel="stylesheet" media="screen and (max-width:768px)">	
+	<link rel="stylesheet" type="text/css" href="../../css/x-css/h_gsgg.css"  media="screen and (min-width:769px)">
+	<link rel="stylesheet" type="text/css" href="../../css/x-css/h_gsggphone.css" media="screen and (max-width:768px)">
 	<link rel="stylesheet" type="text/css" href="../../css/swiper.min.css">	
 	<script src="../../js/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="../../js/mobile-util.js"></script>
@@ -138,18 +124,14 @@
 
 
 <!-- banner 开始-->
-<div class="h_banner">
+<div class="h_banner" style="background-image:url(../../images/x-img/bar.jpg)">
 	<div class="h_box">
 		<!-- 导航 -->
 		<div class="h_bannav clearfix">
 			<ul class="h_tab">
-				<li><a ui-sref="zcjy">总裁寄语</a></li>
-				<li><a ui-sref="qyjs">企业介绍</a></li>
-				<li><a ui-sref="hydw">行业地位</a></li>
-				<li><a ui-sref="qyry">企业荣耀</a></li>
-				<li><a ui-sref="qyfc">企业风采</a></li>
-				<li><a ui-sref="jrwm">加入我们</a></li>
-				<li id="h_lx"><a ui-sref="lxwm">联系我们</a></li>
+				<li style="width:33.333%"><a ui-sref="gsgg">公司公告</a></li>
+				<li style="width:33.333%"><a ui-sref="gszc">章程制度</a></li>
+				<li id="h_lx" style="width:33.333%"><a ui-sref="gpxx">股票信息</a></li>
 			</ul>
 		</div>
 		<!-- 导航结束 -->
