dazuzhang9.3 Signed-off-by: Lijiangboouba <1094838104@qq.com>

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <div class="h_nav_box left">
             	<a href="html/b_html/works.html" class="h_select">成功案例</a>
 	        	<ul class="h_ul">
-	            	<li><a href="#">全部案例</a></li>
-	            	<li><a href="#" id="h_video">视频会议</a></li>
-	            	<li><a href="#">电话会议</a></li>
-	            	<li><a href="#">网络直播</a></li>
-	            	<li><a href="#">网络会议</a></li>
+	            	<li><a href="html/b_html/works.html">全部案例</a></li>
+	            	<li><a href="html/b_html/works.html" id="h_video">视频会议</a></li>
+	            	<li><a href="html/b_html/works.html">电话会议</a></li>
+	            	<li><a href="html/b_html/works.html">网络直播</a></li>
+	            	<li><a href="html/b_html/works.html">网络会议</a></li>
 	            </ul>
             </div>
             <div class="h_nav_box left">
@@ -95,7 +95,7 @@
 	            </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">绿色办公室</a>
+            	<a href="html/b_html/office_b.html" class="h_select">绿色办公室</a>
             	<ul class="h_ul"></ul>
             </div>   
             <!-- 翻译 -->
@@ -386,61 +386,61 @@
 <div class="works_b">
 	<div class="works_b_tit">
 		<h3>成功案例</h3>
-		<a href="">More ></a>
+		<a href="html/b_html/works.html">More ></a>
 	</div>
 	<div class="works_b_con">
 		<div class="works_b_con_node">
 			<span></span>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>全国销售足不出户畅享沟通，巨型药企</h3>
 				<p>成立于1849年，是全国最大的研发型制药公司,研发产品包括从一起临床到注册等各个阶段共118个项目，超过60个产品的销售</p>
 			</a>
 		</div>
 		<div class="works_b_con_node">
 			<span></span>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>线上营销创举，全球知名计量企业</h3>
 				<p>世界电子测试工具生产、分销和服务的领导者，成立于1948年，已授权的分销商遍布世界100多个国家，雇员约2400人。总部...</p>
 			</a>
 		</div>
 		<div class="works_b_con_node">
 			<span></span>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>PC生产企业网络会议成功案例</h3>
 				<p>PC巨头广覆盖、低成本轻松实现4-6级店商培训</p>
 			</a>
 		</div>
 		<div class="works_b_con_node">
 			<span></span>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>PC巨头广覆盖、低成本轻松实现</h3>
 				<p>全球领先的PC生产企业之一，总部设在中国和美国跨国科技公司，研发、生产和销售笔记本电脑、一体机、台式电脑、服务器、手机、...</p>
 			</a>
 		</div>
 		<div class="works_b_con_node">
 			<span></span>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>会畅多方通信3.0咨询服务</h3>
 				<p>世界巨型药企，导入多方通信3.0咨询服务短期节约3000万美金</p>
 			</a>
 		</div>
 		<div class="works_b_con_node">
 			<span></span>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>全球最大电气电子公司视频会议成功案例</h3>
 				<p>全球最大电气电子公司，低碳绿色经营遍布全球</p>
 			</a>
 		</div>
 		<div class="works_b_con_node">
 			<span></span>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>全国销售足不出户畅享沟通</h3>
 				<p>成立于1849年，是全国最大的研发型制药公司,研发产品包括从一起临床到注册等各个阶段共118个项目，超过60个产品的销售</p>
 			</a>
 		</div>
 		<div class="works_b_con_node">
 			<span></span>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>全国销售足不出户畅享沟通</h3>
 				<p>成立于1849年，是全国最大的研发型制药公司,研发产品包括从一起临床到注册等各个阶段共118个项目，超过60个产品的销售</p>
 			</a>
@@ -453,61 +453,61 @@
 <div class="works_b_phone">
 	<div class="works_b_phone_tit">
 		<h3>成功案例</h3>
-		<a href="">More ></a>
+		<a href="html/b_html/works.html">More ></a>
 	</div>
 	<div class="works_b_phone_con clearfix" id="works_b_phone_con">
 		<div class="works_b_phone_con_node">
 			<img src="images/index-img/work_b (1).jpg" alt=""/>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>全国销售足不出户畅享沟</h3>
 				<p>成立于1849年，是全国最大的研发型制药公司...</p>
 			</a>
 		</div>
 		<div class="works_b_phone_con_node">
 			<img src="images/index-img/work_b (2).jpg" alt=""/>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>线上营销创举，全球知名</h3>
 				<p>世界电子测试工具生产、分销和服务的领导者...</p>
 			</a>
 		</div>
 		<div class="works_b_phone_con_node">
 			<img src="images/index-img/work_b (3).jpg" alt=""/>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>PC生产企业网络会议成功案例</h3>
 				<p>PC巨头广覆盖、低成本轻松实现4-6级店商培训</p>
 			</a>
 		</div>
 		<div class="works_b_phone_con_node">
 			<img src="images/index-img/work_b (4).jpg" alt=""/>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>PC巨头广覆盖、低成本轻</h3>
 				<p>全球领先的PC生产企业之一，总部设在中国...</p>
 			</a>
 		</div>
 		<div class="works_b_phone_con_node">
 			<img src="images/index-img/work_b (5).jpg" alt=""/>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>会畅多方通信3.0咨询服</h3>
 				<p>世界巨型药企，导入多方通信3.0咨询服务短期节约3000万美金</p>
 			</a>
 		</div>
 		<div class="works_b_phone_con_node">
 			<img src="images/index-img/work_b (6).jpg" alt=""/>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>全球最大电气电子公司视频</h3>
 				<p>全球最大电气电子公司，低碳绿色经营遍布全球</p>
 			</a>
 		</div>
 		<div class="works_b_phone_con_node">
 			<img src="images/index-img/work_b (7).jpg" alt=""/>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>全国销售足不出户畅享</h3>
 				<p>成立于1849年，是全国最大的研发型制药公司,</p>
 			</a>
 		</div>
 		<div class="works_b_phone_con_node">
 			<img src="images/index-img/work_b (8).jpg" alt=""/>
-			<a href="">
+			<a href="html/b_html/works.html">
 				<h3>全国销售足不出户畅享沟</h3>
 				<p>成立于1849年，是全国最大的研发型制药公司</p>
 			</a>
