--- a/html/b_html/office_b.html
+++ b/html/b_html/office_b.html
@@ -48,13 +48,13 @@
                 </ul>
             </div>
             <div class="h_nav_box left">
-                <a href="#" class="h_select">成功案例</a>
+                <a href="works.html" class="h_select">成功案例</a>
                 <ul class="h_ul">
-                    <li><a href="#">全部案例</a></li>
-                    <li><a href="#" id="h_video">视频会议</a></li>
-                    <li><a href="#">电话会议</a></li>
-                    <li><a href="#">网络直播</a></li>
-                    <li><a href="#">网络会议</a></li>
+                    <li><a href="works.html">全部案例</a></li>
+                    <li><a href="works.html" id="h_video">视频会议</a></li>
+                    <li><a href="works.html">电话会议</a></li>
+                    <li><a href="works.html">网络直播</a></li>
+                    <li><a href="works.html">网络会议</a></li>
                 </ul>
             </div>
             <div class="h_nav_box left">
@@ -97,7 +97,7 @@
                 </ul>
             </div>
             <div class="h_nav_box left">
-                <a href="#" class="h_select">绿色办公室</a>
+                <a href="office_b.html" class="h_select">绿色办公室</a>
                 <ul class="h_ul"></ul>
             </div>
             <!-- 翻译 -->
