--- a/index.html
+++ b/index.html
@@ -736,6 +736,6 @@
 <script type="text/javascript" src="js/test_common.js"></script>
 <script type="text/javascript" src="js/index_b.js"></script>
 
-
+<script type="text/javascript" src="js/banner-B.js"></script>
 </body>
 </html>
