--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
 	            </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">关于我们</a>
+            	<a href="html/x-html/About.html" class="h_select">关于我们</a>
 	        	<ul class="h_ul">
-	            	<li><a href="#">总裁寄语</a></li>
-	            	<li><a href="#">企业介绍</a></li>
-	            	<li><a href="#">行业地位</a></li>
-	            	<li><a href="#">企业荣耀</a></li>
-	            	<li><a href="#">企业风采</a></li>
-	            	<li><a href="#">加入我们</a></li>
-	            	<li><a href="#">联系我们</a></li>
+	            	<li><a href="html/x-html/About.html">总裁寄语</a></li>
+	            	<li><a href="html/x-html/About.html">企业介绍</a></li>
+	            	<li><a href="html/x-html/About.html">行业地位</a></li>
+	            	<li><a href="html/x-html/About.html">企业荣耀</a></li>
+	            	<li><a href="html/x-html/About.html">企业风采</a></li>
+	            	<li><a href="html/x-html/About.html">加入我们</a></li>
+	            	<li><a href="html/x-html/About.html">联系我们</a></li>
 	            </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">投资者关系</a>
+            	<a href="html/x-html/tzzgx.html" class="h_select">投资者关系</a>
 	        	<ul class="h_ul">
-	            	<li><a href="#">公司公告</a></li>
-	            	<li><a href="#">章程制度</a></li>
-	            	<li><a href="#">股票信息</a></li>
+	            	<li><a href="html/x-html/tzzgx.html">公司公告</a></li>
+	            	<li><a href="html/x-html/tzzgx.html">章程制度</a></li>
+	            	<li><a href="html/x-html/tzzgx.html">股票信息</a></li>
 	            </ul>
             </div>
             <div class="h_nav_box left">
