--- a/html/x-html/qyry.html
+++ b/html/x-html/qyry.html
@@ -21,88 +21,88 @@
 	                                    CHRONICLE</h4>
 					</div>
 				</div>
-				<div class="h_contactRight right">
-					<div class="h_eventswiper">
-						<div class="h_eventRotate">
+				<div class="h_contactRight right focus">
+					<ul class="h_eventswiper lb">
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2016年</h3>
 								<a href="#">1、荣获ISO9001、14001、27001体系认证</a>
 								<a href="#">2、成立深圳分公司和江苏分公司</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2015年</h3>
 								<a href="#">1、全球权威市场调研机构Wainhouse Research发布报告“会畅通讯在电话会议市场占有率居中国区第二位”、蝉联“网络会议市场占有率居中国区第一位”</a>
 								<a href="#">2、成立深圳分公司和江苏分公司2、在重庆、天津、福建、湖北、湖南、河北、江苏、浙江等地设立办事处</a>
 								<a href="#">3、与享誉全球的公益机构WWF建立战略合作，共同推动中国“绿色办公室”项目</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2014年</h3>
 								<a href="#">1、Wainhouse Research发布报告“会畅通讯在电话会议市场占有率居中国区第二位”、 “网络会议市场占有率居中国区第一位”</a>
 								<a href="#">2、荣获中国信息产业经济年会“2014中国信息产业年度影响力企业奖”和“中国信息产业年度最具竞争力产品奖”</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2013年</h3>
 								<a href="#">1、全球权威市场调研机构Wainhouse Research发布报告“会畅通讯在电话会议市场占有率居中国区第二位”、蝉联“网络会议市场占有率居中国区第一位”1、全球知名咨询公司Frost & Sullivan 颁发的“亚太区年度会议服务供应商奖”</a>
 								<a href="#">2、与Cisco 中国签署深度战略合作MOU协议，共同开拓国内语音及网络会议市场</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2012年</h3>
 								<a href="#">1、率先提出”多方通信 3.0”概念，行业首家将咨询式服务模式应用到企业的沟通协作领域</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2011年</h3>
 								<a href="#">1、获得全球知名咨询公司Frost & Sullivan 颁发的“年度最佳服务供应商大奖”</a>
 								<a href="#">2、完成股份制改造，正式更名为“上海会畅通讯股份有限公司”</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2010年</h3>
 								<a href="#">1、国内率先推出企业应用级别的“网络直播”服务，帮助多家建立创新型的数字营销平台</a>
 								<a href="#">2、公司年收入突破1亿人民币</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2009年</h3>
 								<a href="#">1、与“保护国际”组织合作，助力中国企业节能减排的环保行动</a>
 								<a href="#">2、推出VIP人工电话会议服务，完善语音会议的产品体系</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2008年</h3>
 								<a href="#">1、与全球最大的多方通信服务提供商InterCall建立战略合作伙伴关系，最大程度满足中国客户专业化和全球化的需求</a>
 								<a href="#">2、成立广州分公司</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2007年</h3>
 								<a href="#">1、与多国基础运营商展开业务合作，服务网点突破100个国家和地区</a>
 								<a href="#">2、国内业务增长迅猛，实现当年300%的业务增长量</a>
 							</div>
-						</div>
-						<div class="h_eventRotate">
+						</li>
+						<li class="h_eventRotate">
 							<div class="h_eventSlice">
 								<h3>2006年</h3>
 								<a href="#">1、公司成立，获得中华人民共和国工业和信息化部（MIIT）办法的多方通信运营资质</a>
 								<a href="#">2、与法国Genesys建立战略合作伙伴关系，引进全球最领先的多方通信技术平台。</a>
 							</div>
-						</div>
-					</div>
-					<div class="h_btn"></div>
-					<div class="h_btn2"></div>
+						</li>
+					</ul>
+					<div class="h_btn LBtn"></div>
+					<div class="h_btn2 RBtn"></div>
 				</div>
 				<img src="../../images/x-img/cup-about.png" class="h_cup">
 			</div>
@@ -149,3 +149,58 @@
 	</div>
 </div>
 <!-- 主体部分结束 -->
+
+
+<script type="text/javascript">
+	
+var Focus=document.querySelector('.focus'),
+    lb=Focus.querySelector('.lb'),
+	li=lb.getElementsByTagName('li'),
+	LBtn=Focus.querySelector('.LBtn'),
+	RBtn=Focus.querySelector('.RBtn');
+	
+var liH=parseInt(getComputedStyle(li[0]).height);	
+var liNum=0,         //图片移动次数计数器
+    aniTime,          //动画定时器
+	lastNum=0,        //图片每次移动距离计数器
+	flag=true;       //按钮事件开关
+//右键点击事件
+RBtn.onclick=function(){
+   if(flag){
+	       flag=false;
+	       if(liNum>=li.length-1){
+			  lb.style.marginTop='0px';                 
+			  liNum=0;
+		   }
+		  animation(-20,liH);
+		  liNum++;
+   }
+}
+//左键点击事件 
+LBtn.onclick=function(){
+    if(flag){
+		flag=false;
+		if(liNum<=0){
+		   lb.style.marginTop=-parseInt(getComputedStyle(lb).height)+240+'px';
+		   liNum=li.length-1;
+		}
+		animation(20,liH);
+		liNum--;
+		}
+}
+//动画函数
+function animation(everyMove,liH){
+	var moveNum=Math.abs(parseInt(liH/everyMove));
+	//console.log(moveNum);
+	aniTime=setInterval(function(){
+		if(lastNum>=moveNum){
+			clearInterval(aniTime);
+			lastNum=0;                      //计数器清0
+			flag=true;
+			return;                         //停止执行后面的
+		}
+	   lb.style.marginTop=parseInt(getComputedStyle(lb).marginTop)+everyMove+'px';	
+	   lastNum++;
+	},24);
+}
+</script>
