--- a/html/x-html/tzzgx.html
+++ b/html/x-html/tzzgx.html
@@ -50,13 +50,13 @@
                 </ul>        
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">成功案例</a>
+            	<a href="../b_html/works.html" class="h_select">成功案例</a>
 	        	<ul class="h_ul">
-	            	<li><a href="#">全部案例</a></li>
-	            	<li><a href="#" id="h_video">视频会议</a></li>
-	            	<li><a href="#">电话会议</a></li>
-	            	<li><a href="#">网络直播</a></li>
-	            	<li><a href="#">网络会议</a></li>
+	            	<li><a href="../b_html/works.html">全部案例</a></li>
+	            	<li><a href="../b_html/works.html" id="h_video">视频会议</a></li>
+	            	<li><a href="../b_html/works.html">电话会议</a></li>
+	            	<li><a href="../b_html/works.html">网络直播</a></li>
+	            	<li><a href="../b_html/works.html">网络会议</a></li>
 	            </ul>
             </div>
             <div class="h_nav_box left">
@@ -79,27 +79,27 @@
 	            </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">关于我们</a>
+            	<a href="About.html" class="h_select">关于我们</a>
 	        	<ul class="h_ul">
-	            	<li><a href="#">总裁寄语</a></li>
-	            	<li><a href="#">企业介绍</a></li>
-	            	<li><a href="#">行业地位</a></li>
-	            	<li><a href="#">企业荣耀</a></li>
-	            	<li><a href="#">企业风采</a></li>
-	            	<li><a href="#">加入我们</a></li>
-	            	<li><a href="#">联系我们</a></li>
+	            	<li><a href="About.html">总裁寄语</a></li>
+	            	<li><a href="About.html">企业介绍</a></li>
+	            	<li><a href="About.html">行业地位</a></li>
+	            	<li><a href="About.html">企业荣耀</a></li>
+	            	<li><a href="About.html">企业风采</a></li>
+	            	<li><a href="About.html">加入我们</a></li>
+	            	<li><a href="About.html">联系我们</a></li>
 	            </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">投资者关系</a>
+            	<a href="tzzgx.html" class="h_select">投资者关系</a>
 	        	<ul class="h_ul">
-	            	<li><a href="#">公司公告</a></li>
-	            	<li><a href="#">章程制度</a></li>
-	            	<li><a href="#">股票信息</a></li>
+	            	<li><a href="tzzgx.html">公司公告</a></li>
+	            	<li><a href="tzzgx.html">章程制度</a></li>
+	            	<li><a href="tzzgx.html">股票信息</a></li>
 	            </ul>
             </div>
             <div class="h_nav_box left">
-            	<a href="#" class="h_select">绿色办公室</a>
+            	<a href="../b_html/office_b.html" class="h_select">绿色办公室</a>
             </div>   
             <!-- 翻译 -->
             <div class="h_language left clear">
@@ -129,7 +129,7 @@
 		<!-- 导航 -->
 		<div class="h_bannav clearfix">
 			<ul class="h_tab">
-				<li style="width:33.333%"><a ui-sref="gsgg">公司公告</a></li>
+				<li style="width:33.333%"><a ui-sref="gsgg"  class="h_color">公司公告</a></li>
 				<li style="width:33.333%"><a ui-sref="gszc">章程制度</a></li>
 				<li id="h_lx" style="width:33.333%"><a ui-sref="gpxx">股票信息</a></li>
 			</ul>
