Signed-off-by: huxuexue <1711356156@qq.com>

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 <!-- side column-nav    _stars -->
 <div class="column_b">
 	<div class="column_b_wx">
-		<div class="column_b_wx_con column_b_show"><p>在线咨询</p></div>
+		<div class="column_b_wx_con column_b_show"><p><a href="practice_b.html">在线咨询</a></p></div>
 	</div>
 	<div class="column_b_phone">
 		<div class="column_b_phone_con column_b_show"><p>400-062-1818</p></div>
